force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>An assessment created by an advisor for a particular account/proposal/profile/portfolio</description>
    <label>Assessment</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>