force-app/main/default/objects/Assessment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to which this assessment is linked</description>
    <inlineHelpText>The account to which this assessment is linked</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>