force-app/main/default/objects/Assessment__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <description>The advisor to which this assessment is linked</description>
    <inlineHelpText>The advisor to which this assessment is linked</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>