force-app/main/default/objects/Assessment__c/fields/Advisor_Term__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor term record linked to this assessment</description>
    <inlineHelpText>The advisor term record linked to this assessment</inlineHelpText>
    <label>Advisor Term</label>
    <referenceTo>Advisor_Term__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>