force-app/main/default/objects/Assessment__c/fields/Date_due__c.field-meta.xml
<CustomField>
    <fullName>Date_due__c</fullName>
    <description>The date by which this assessment should be submitted</description>
    <inlineHelpText>The date by which this assessment should be submitted</inlineHelpText>
    <label>Date due</label>
    <type>Date</type>
</CustomField>