force-app/main/default/objects/Assessment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this assessment</description>
    <inlineHelpText>Description of this assessment</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>