force-app/main/default/objects/Assessment__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The form to be used for this assessment</description>
    <inlineHelpText>The form to be used for this assessment</inlineHelpText>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>