force-app/main/default/objects/Assessment__c/fields/GM_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>GM_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>GM ExternalID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>