force-app/main/default/objects/Assessment__c/fields/Grantee_Report__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The grantee report to which this assessment is linked</description>
    <inlineHelpText>The grantee report to which this assessment is linked</inlineHelpText>
    <label>Grantee Report</label>
    <referenceTo>Grantee_Report__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>