force-app/main/default/objects/Assessment__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone to which this assessment is linked</description>
    <inlineHelpText>The milestone to which this assessment is linked</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>