force-app/main/default/objects/Assessment__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The portfolio to which this assessment is linked</description>
    <inlineHelpText>The portfolio to which this assessment is linked</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>