force-app/main/default/objects/Assessment__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The profile to which this assessment is linked</description>
    <inlineHelpText>The profile to which this assessment is linked</inlineHelpText>
    <label>Profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>