force-app/main/default/objects/Assessment__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The proposal to which this assessment is linked</description>
    <inlineHelpText>The proposal to which this assessment is linked</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>