force-app/main/default/objects/Assessment__c/fields/Review_Form__c.field-meta.xml
<CustomField>
    <fullName>Review_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The review form to be used for this assessment</description>
    <inlineHelpText>The review form to be used for this assessment</inlineHelpText>
    <label>Review Form</label>
    <referenceTo>Review_Form__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>