force-app/main/default/objects/Assessment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of this assessment</description>
    <formula>IF ( NOT(ISBLANK(Date_submitted__c)), &quot;2 Submitted&quot;,

&quot;1 Assessment pending&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The status of this assessment</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>