force-app/main/default/objects/Assessment__c/fields/Status_external__c.field-meta.xml
<CustomField>
    <fullName>Status_external__c</fullName>
    <description>External status of this assessment (the version that is viewed by the advisor)</description>
    <formula>IF ( CONTAINS( LOWER(Status__c) , &quot;pending&quot; ), &quot;Pending&quot;,
&quot;Submitted&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>External status of this assessment (the version that is viewed by the advisor)</inlineHelpText>
    <label>Status external</label>
    <type>Text</type>
</CustomField>