force-app/main/default/objects/Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Advisor__c</columns>
    <columns>Form__c</columns>
    <columns>Description__c</columns>
    <columns>Account__c</columns>
    <columns>Proposal__c</columns>
    <columns>Date_submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>