force-app/main/default/objects/Assessment__c/listViews/Assessments_Proposals.listView-meta.xml
<ListView>
    <fullName>Assessments_Proposals</fullName>
    <columns>NAME</columns>
    <columns>Advisor__c</columns>
    <columns>Form__c</columns>
    <columns>Description__c</columns>
    <columns>Account__c</columns>
    <columns>Proposal__c</columns>
    <columns>Date_submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proposal__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Assessments - Proposals</label>
</ListView>